# cim-domain-bevy

./: Cargo.toml  README.md  README_NATS_VISUALIZATION.md  SUMMARY.md  fix_summary.md  summary.md  test_graph.json
doc/: architecture-note.md
examples/: README.md  basic_ecs.rs  deployment_graph_demo.rs  nats_component_sync_demo.rs  nats_event_visualization_demo.rs  nats_event_visualization_with_ui.rs  readme.md  simple_3d_test.rs  simple_demo.rs  simulate_domain_events.rs  test_events.rs  usage_example.rs  visual_demo.rs  workflow_demo.rs  workflow_demo_fixed.rs  workflow_demo_minimal.rs  workflow_demo_simple.rs  workflow_demo_standalone.rs  workflow_demo_visual.rs  workflow_demo_with_camera.rs  workflow_demo_with_ui.rs  workflow_event_stream_demo.rs  workflow_visual_demo.rs
src/: bridge.rs  components.rs  deployment_visualization.rs  edge_systems.rs  events.rs  functors.rs  layout.rs  lib.rs  morphisms.rs  nats_component_bridge.rs  nats_event_filter_ui.rs  nats_event_visualization.rs  nats_event_visualization_ui.rs  plugin.rs  resources.rs  visualization.rs
src/aggregate/: mod.rs
src/commands/: mod.rs
src/events/: mod.rs
src/handlers/: mod.rs
src/projections/: mod.rs
src/queries/: mod.rs
src/value_objects/: mod.rs
tests/: functor_tests.rs  isomorphic_component_sync_test.rs
