[package]
name = "cim-domain-bevy"
version = "0.3.0"
edition = "2021"

[dependencies]
# Core dependencies
cim-contextgraph = { path = "../cim-contextgraph" }
cim-domain = { path = "../cim-domain" }

# Bevy for visualization - use workspace patched version
bevy = { path = "../bevy-patched", default-features = false, features = [
    "bevy_log",
    "bevy_color",
    "bevy_render",
    "bevy_pbr",
    "bevy_gizmos",
    "bevy_text",
    "bevy_ui",
    "bevy_window",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_sprite",
    "bevy_asset",
    "bevy_scene",
    "default_font",
    "png",
    "x11",
    "wayland",
    "multi_threaded",
    "tonemapping_luts",   # Added to fix shader compilation
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Math and utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
petgraph = "0.6"

# Date/time for event timestamps
chrono = "0.4"

# Async for event handling
tokio = { version = "1.42", features = ["sync"] }
crossbeam-channel = "0.5"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
criterion = "0.5"
proptest = "1.6"
rand = "0.8"

[[example]]
name = "visual_demo"
path = "examples/visual_demo.rs"

[[example]]
name = "simple_demo"
path = "examples/simple_demo.rs"

[[example]]
name = "workflow_demo"
path = "examples/workflow_demo.rs"

[[example]]
name = "usage_example"
path = "examples/usage_example.rs"

[[example]]
name = "workflow_demo_minimal"
path = "examples/workflow_demo_minimal.rs"

[[example]]
name = "workflow_demo_visual"
path = "examples/workflow_demo_visual.rs"

[[example]]
name = "workflow_demo_with_camera"
path = "examples/workflow_demo_with_camera.rs"

[[example]]
name = "workflow_demo_with_ui"
path = "examples/workflow_demo_with_ui.rs"

[[example]]
name = "workflow_event_stream_demo"
path = "examples/workflow_event_stream_demo.rs"
